--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -694,17 +694,17 @@
 
             let redPositions, blackPositions;
             if (turn === 0) {
-                if (invertColors) {
-                    redPositions = { '1': 2, '12': 5, '17': 3, '19': 5, 'bar': 0, 'off': 0 };
-                    blackPositions = { '6': 5, '8': 3, '13': 5, '24': 2, 'bar': 0, 'off': 0 };
-                } else {
-                    redPositions = { '24': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 };
-                    blackPositions = { '1': 2, '19': 5, '17': 3, '12': 5, 'bar': 0, 'off': 0 };
-                }
+                redPositions = { '24': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 };
+                blackPositions = { '1': 2, '19': 5, '17': 3, '12': 5, 'bar': 0, 'off': 0 };
             } else {
                 const prevTurn = turn - 1;
-                redPositions = data[prevTurn].positions['red'];
-                blackPositions = data[prevTurn].positions['black'];
+                if (invertColors) {
+                    redPositions = data[prevTurn].inverted_positions['red'];
+                    blackPositions = data[prevTurn].inverted_positions['black'];
+                } else {
+                    redPositions = data[prevTurn].positions['red'];
+                    blackPositions = data[prevTurn].positions['black'];
+                }
             }
             const currentPlayer = data[turn].player.toLowerCase();
             drawCheckers('red', whiteImg, redPositions, currentPlayer);
